--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "prod":"ng serve -prod --port"
   },
   "private": true,
   "dependencies": {
