--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "ng2-bootstrap": "^1.1.5",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.6.23",
+    "angular-cli": "1.0.0-beta.15",
+    "bootstrap": "4.x.x",
+    "typescript": "2.0.2",
+    "ts-node": "1.2.1"
   },
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
-    "angular-cli": "1.0.0-beta.15",
     "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
@@ -39,8 +42,6 @@
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "4.0.5",
-    "ts-node": "1.2.1",
     "tslint": "3.13.0",
-    "typescript": "2.0.2"
   }
 }
