--- a/package.json
+++ b/package.json
@@ -42,6 +42,6 @@
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "4.0.5",
-    "tslint": "3.13.0",
+    "tslint": "3.13.0"
   }
 }
