--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23",
     "angular-cli": "1.0.0-beta.15",
-    "bootstrap": "4.x.x",
+    "bootstrap": "4.0.0-alpha.4",
     "typescript": "2.0.2",
     "ts-node": "1.2.1"
   },
