--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
-    "prod":"ng serve -prod --port"
+    "prod":"ng serve -prod"
   },
   "private": true,
   "dependencies": {
