--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "video-clien-app",
   "version": "0.0.0",
   "license": "MIT",
+  "engines": {
+  "node": ">=4.0.0"
+  },
   "angular-cli": {},
   "scripts": {
     "start": "ng serve",
