--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
     "angular-cli": "1.0.0-beta.15",
     "bootstrap": "4.0.0-alpha.4",
     "typescript": "2.0.2",
-    "ts-node": "1.2.1"
-  },
-  "devDependencies": {
+    "ts-node": "1.2.1",    
     "@types/jasmine": "^2.2.30",
     "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
@@ -46,5 +44,7 @@
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "4.0.5",
     "tslint": "3.13.0"
+  },
+  "devDependencies": {
   }
 }
