--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
-    "prod":"ng serve -prod"
+    "prod":"ng serve -prod --port"
   },
   "private": true,
   "dependencies": {
@@ -32,7 +32,7 @@
     "angular-cli": "1.0.0-beta.15",
     "bootstrap": "4.0.0-alpha.4",
     "typescript": "2.0.2",
-    "ts-node": "1.2.1",    
+    "ts-node": "1.2.1",
     "@types/jasmine": "^2.2.30",
     "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
